small changes in conclusion of the laboratory work

--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -1399,9 +1399,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "При анализе кадра с мужчинами, выявляется более сильная связь от результатов тестов. Это то, что и ожидалось. Ведь результаты тестов направлены на оценку интеллекта.\n",
+    "При анализе кадра женщин, выявляется более сильная связь от веса. Это то, что и ожидалось. Ведь рамер мозга зависит от веса.\n",
     "\n",
-    "Однако, корреляция между данными кадра женщин оказались необычной. Самая сильная корреляция между шкалой интеллекта(MRI), выявилась с весом участниц. Несмотря на то, что корреляция между данными результатов решения каждого из тестов близки между собой, они достачно меньше, чем у мужчин.\n",
+    "Однако, корреляция между данными кадра мужчин оказались необычной. Самая сильная корреляция между шкалой интеллекта(MRI), выявилась с результатами тестов участников. Несмотря на то, что корреляция между данными результатов решения каждого из тестов близки между собой, они значительно больше, чем у женщин. А вес, наоборот, оказался наименее значимой переменной для выявления размеров мозга у мужчин.\n",
     "Рекомендуются дальнейшие исследования в этой области, с увеличением выборок для исследования."
    ]
   }
